added tip-calculator and currency-converter

--- a/app/app/index.html
+++ b/app/app/index.html
@@ -26,6 +26,7 @@
         <ul class="nav nav-pills pull-right">
           <li><a ng-href="#/split-bill">Split Bill</a></li>
           <li><a ng-href="#/invoice">Invoice</a></li>
+          <li><a ng-href="#/tip-calculator">Tip Calculator</a></li>
         </ul>
         <h3 class="text-muted">Halloumi</h3>
       </div>
@@ -73,6 +74,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/split-bill.js"></script>
         <script src="scripts/controllers/invoice.js"></script>
+        <script src="scripts/controllers/tip-calculator.js"></script>
+        <script src="scripts/controllers/currency-converter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
