--- a/app/app/index.html
+++ b/app/app/index.html
@@ -25,8 +25,8 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li><a ng-href="#/split-bill">Split Bill</a></li>
-          <li><a ng-href="#/invoice">Invoice</a></li>
           <li><a ng-href="#/tip-calculator">Tip Calculator</a></li>
+          <li><a ng-href="#/currency-converter">Currency Converter</a></li>
         </ul>
         <h3 class="text-muted">Halloumi</h3>
       </div>
@@ -34,7 +34,7 @@
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-console"></span> From IAT381 with love <span class="glyphicon glyphicon-heart"></span></p>
       </div>
     </div>
 
