--- a/app/app/index.html
+++ b/app/app/index.html
@@ -21,29 +21,28 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar-default navbar-fixed-top">
       <div class="navbar-header text-center">
         <h4>Halloumi</h4> 
       </div>
     </div>
 
-    <div class="container">
       <div ng-view=""></div>
 
-      <div class="footer">
-        <div class="nav-pills navbar-fixed-bottom">
-          <div class="border row">
-            <div class="border col-xs-3 text-center">
-              <a ng-href="#/Home"><img class="hoverNav" src="images/home.svg" height="50" width="50"></a>
+      <div class="navBorder">
+        <div class="navbar-inverse navbar-fixed-bottom">
+          <div class="row">
+            <div class="col-border col-xs-3 text-center">
+              <a ng-href="#/Home"><img class="hoverNav" src="images/home.png" height="40" width="40"></a><div class="navText">Home</div>
             </div>
-            <div class="border col-xs-3 text-center">
-              <a ng-href="#/split-bill"><img class="hoverNav"  src="images/split-bill.svg" height="50" width="50"></a>
+            <div class="col-border col-xs-3 text-center">
+              <a ng-href="#/split-bill"><img class="hoverNav"  src="images/splitBill.png" height="40" width="40"></a><div class="navText">Split Bill</div>
             </div>
-            <div class="border col-xs-3 text-center">
-              <a ng-href="#/tip-calculator"><img class="hoverNav" src="images/tip-calculator.svg" height="50" width="50"></a>
+            <div class="col-border col-xs-3 text-center">
+              <a ng-href="#/tip-calculator"><img class="hoverNav" src="images/tipCalculator.png" height="40" width="40"></a><div class="navText">Tip Calculator</div>
             </div>
-            <div class="border col-xs-3 text-center">
-              <a ng-href="#/currency-converter"><img class="hoverNav" src="images/currency-converter.svg" height="50" width="50"></a>
+            <div class="col-border col-xs-3 text-center">
+              <a ng-href="#/currency-converter"><img class="hoverNav" src="images/currencyExchange.png" height="40" width="40"></a><div class="navText">Currency Exchange</div>
             </div>
           </div>
         </div>
