--- a/app/app/index.html
+++ b/app/app/index.html
@@ -5,6 +5,11 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="initial-scale=1">
+    <meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,width=device-width,height=device-height,target-densitydpi=device-dpi,user-scalable=yes" />
+    <meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,width=device-width,user-scalable=no" />
+
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -27,13 +32,12 @@
       </div>
     </div>
 
-      <div ng-view=""></div>
-
+      <div ng-view="" ng-class='panStyle'></div>
       <div class="navBorder">
         <div class="navbar-inverse navbar-fixed-bottom">
           <div class="row">
             <div class="col-border col-xs-3 text-center">
-              <a ng-href="#/Home"><img class="hoverNav" src="images/home.png" height="40" width="40"></a><div class="navText">Home</div>
+              <a ng-href="#/"><img class="hoverNav" src="images/home.png" height="40" width="40"></a><div class="navText">Home</div>
             </div>
             <div class="col-border col-xs-3 text-center">
               <a ng-href="#/split-bill"><img class="hoverNav"  src="images/splitBill.png" height="40" width="40"></a><div class="navText">Split Bill</div>
@@ -47,8 +51,6 @@
           </div>
         </div>
       </div>
-    </div>
-
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -83,7 +85,6 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/split-bill.js"></script>
-        <script src="scripts/controllers/invoice.js"></script>
         <script src="scripts/controllers/tip-calculator.js"></script>
         <script src="scripts/controllers/currency-converter.js"></script>
         <script src="scripts/controllers/home.js"></script>
