--- a/app/app/index.html
+++ b/app/app/index.html
@@ -18,7 +18,6 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
     <!-- endbuild -->
   </head>
   <body ng-app="halloumiAppApp">
@@ -38,16 +37,16 @@
         <div class="navbar-inverse navbar-fixed-bottom">
           <div class="row">
             <div class="col-border col-xs-3 text-center">
-              <a ng-href="#/"><img class="hoverNav" src="images/home.png" height="40" width="40"></a><div class="navText">Home</div>
+              <a ng-href="#/"><img class="hoverNav" id='/' src="images/home.png" height="40" width="40"></a><div class="navText">Home</div>
             </div>
             <div class="col-border col-xs-3 text-center">
-              <a ng-href="#/split-bill"><img class="hoverNav"  src="images/splitBill.png" height="40" width="40"></a><div class="navText">Split Bill</div>
+              <a ng-href="#/split-bill"><img class="hoverNav" id='/split-bill' src="images/splitBill.png" height="40" width="40"></a><div class="navText">Split Bill</div>
             </div>
             <div class="col-border col-xs-3 text-center">
-              <a ng-href="#/tip-calculator"><img class="hoverNav" src="images/tipCalculator.png" height="40" width="40"></a><div class="navText">Tip Calculator</div>
+              <a ng-href="#/tip-calculator"><img class="hoverNav" id='/tip-calculator' src="images/tipCalculator.png" height="40" width="40"></a><div class="navText">Tip Calculator</div>
             </div>
             <div class="col-border col-xs-3 text-center">
-              <a ng-href="#/currency-converter"><img class="hoverNav" src="images/currencyExchange.png" height="40" width="40"></a><div class="navText">Currency Exchange</div>
+              <a ng-href="#/currency-converter"><img class="hoverNav" id='/currency-converter' src="images/currencyExchange.png" height="40" width="40"></a><div class="navText">Currency Exchange</div>
             </div>
           </div>
         </div>
